# bevy_girk

./: ARCHITECTURE.md  Cargo.toml  README.md  USAGE.md
bevy_girk_backend_public/: Cargo.toml
bevy_girk_backend_public/src/: connection_type.rs  game_launch_pack_source.rs  games.rs  host_user_channel.rs  lib.rs  lobbies.rs  lobby_checker.rs
bevy_girk_client_fw/: Cargo.toml  README.md
bevy_girk_client_fw/src/: client_fw_config.rs  client_request_buffer.rs  client_request_sender.rs  commands.rs  game_message_handler.rs  handle_commands.rs  handle_commands_impl.rs  handle_game_incoming.rs  handle_game_incoming_impl.rs  initialization_progress_cache.rs  lib.rs  ping_tracker.rs  plugin.rs  setup.rs  states.rs  systems.rs
bevy_girk_client_instance/: Cargo.toml
bevy_girk_client_instance/src/: client_factory.rs  client_instance_command.rs  client_instance_launcher.rs  client_instance_launcher_process.rs  client_instance_plugin.rs  client_instance_report.rs  handle_command_incoming.rs  lib.rs  local_game_manager.rs  setup.rs
bevy_girk_game_fw/: Cargo.toml  README.md
bevy_girk_game_fw/src/: basic_types.rs  client_fw_request.rs  client_readiness.rs  client_request_handler.rs  client_state.rs  fw_types.rs  game_end_flag.rs  game_fw_clients.rs  game_fw_config.rs  game_fw_initializer.rs  game_fw_msg.rs  game_message_buffer.rs  game_message_sender.rs  handle_requests.rs  handle_requests_impl.rs  information_access.rs  lib.rs  packets.rs  plugin.rs  server_manager.rs  setup.rs  states.rs  systems.rs  types_common.rs  types_game_fw.rs
bevy_girk_game_hub_server/: Cargo.toml
bevy_girk_game_hub_server/src/: cache_pending_games.rs  cache_running_games.rs  cleanup_handlers.rs  game_hub_capacity_tracker.rs  game_hub_commands.rs  handle_commands.rs  handle_host_incoming.rs  handle_instance_reports.rs  handle_launch_pack_reports.rs  lib.rs  server_setup.rs
bevy_girk_game_instance/: Cargo.toml
bevy_girk_game_instance/src/: game_factory.rs  game_instance.rs  game_instance_command.rs  game_instance_launcher.rs  game_instance_launcher_local.rs  game_instance_launcher_local_native.rs  game_instance_launcher_local_wasm.rs  game_instance_launcher_process.rs  game_instance_report.rs  handle_command_incoming.rs  lib.rs  setup.rs  types.rs
bevy_girk_host_server/: Cargo.toml
bevy_girk_host_server/src/: cache_game_hubs.rs  cache_lobbies.rs  cache_ongoing_games.rs  cache_pending_lobbies.rs  cache_users.rs  channel_user.rs  cleanup_handlers.rs  dc_buffer_game_hubs.rs  handle_game_hub_incoming.rs  handle_game_hub_incoming_impl.rs  handle_user_incoming.rs  handle_user_incoming_impl.rs  handler_utils.rs  lib.rs  server_setup.rs
bevy_girk_network_common/: Cargo.toml
bevy_girk_user_client_utils/: Cargo.toml
bevy_girk_user_client_utils/src/: client_launchers.rs  client_monitor.rs  client_starter.rs  lib.rs  plugin.rs  types.rs
bevy_girk_user_client_utils/src/native/: local_player.rs  mod.rs  multiplayer.rs  utils.rs
bevy_girk_user_client_utils/src/wasm/: mod.rs
bevy_girk_utils/: Cargo.toml  README.md
bevy_girk_utils/src/: channel_config_utils.rs  child_process_utils.rs  lib.rs  misc_utils.rs  network_setup.rs  network_utils.rs  rand64.rs  replicate_repair_react_ext.rs  run_conditions.rs  state_transitions.rs
bevy_girk_wiring/: Cargo.toml
bevy_girk_wiring/src/: client_app_setup.rs  game_app_setup.rs  lib.rs  network_message_handling.rs  network_setup.rs  network_utils.rs
bevy_girk_wiring_client/: Cargo.toml  README.md
bevy_girk_wiring_client/src/: client_connect_pack.rs  client_setup.rs  lib.rs  packet_handling.rs  renet_setup.rs
bevy_girk_wiring_common/: Cargo.toml
bevy_girk_wiring_common/src/: address_utils.rs  connect_meta.rs  connection_type.rs  lib.rs  packet_utils.rs  server_connect_token.rs
bevy_girk_wiring_server/: Cargo.toml
bevy_girk_wiring_server/src/: lib.rs  packet_handling.rs  renet_setup.rs  server_setup.rs  test_network.rs
libs/bevy_girk_client_fw/: Cargo.toml  README.md
libs/bevy_girk_client_fw/src/: client_fw_config.rs  client_message_buffer.rs  client_request_buffer.rs  commands.rs  game_message_handler.rs  handle_commands.rs  handle_commands_impl.rs  handle_game_incoming.rs  handle_game_incoming_impl.rs  initialization_progress_cache.rs  lib.rs  ping_tracker.rs  plugin.rs  setup.rs  states.rs  systems.rs
libs/bevy_girk_game_fw/: Cargo.toml  README.md
libs/bevy_girk_game_fw/src/: client_fw_request.rs  client_message_handler.rs  client_request_handler.rs  game_fw_config.rs  game_fw_initializer.rs  lib.rs  (+13 more)
libs/bevy_girk_game_hub_server/: Cargo.toml
libs/bevy_girk_game_instance/: Cargo.toml
libs/bevy_girk_host_server/: Cargo.toml
libs/bevy_girk_user_client_utils/: Cargo.toml
libs/bevy_girk_utils/: Cargo.toml
libs/bevy_girk_wiring/: Cargo.toml
tests/: Cargo.toml  tests.rs
tests/click_game_integration/: basic_game_and_client.rs  basic_server_integration.rs  game_instance_factory.rs  game_instance_launcher.rs  game_state.rs  game_ticks.rs  integration_multiple_games.rs  integration_reconnects.rs  mod.rs  player_clicks.rs  raw_localhost_network.rs  renet_minimal.rs  test_utils.rs
tests/framework/: basic_fw_initialization.rs  basic_ping.rs  mod.rs
tests/game_hub_server/: cache_pending_games.rs  cache_running_games.rs  game_lifecycle.rs  host_reconnects.rs  hub_rejects_game.rs  mod.rs  pending_game_expires.rs  running_game_expires.rs  utils.rs
tests/game_instance/: mod.rs  tests.rs
tests/host_server/: cache_game_hubs.rs  cache_lobbies.rs  cache_ongoing_games.rs  cache_pending_lobbies.rs  cache_users.rs  game_hub_dc_buffer.rs  game_hub_reconnects.rs  game_lifecycle.rs  hub_load_balancing.rs  hub_rejects_game.rs  lobby_checker_rejections.rs  mod.rs  ongoing_game_aborted.rs  pending_lobby_expires.rs  user_leaves_lobby.rs  user_nacks_pending_lobby.rs  user_reconnects.rs  utils.rs
tests/server_integration/: basic_host_hub_integration.rs  mod.rs
tests/test_helpers/: basic_lobby_checker.rs  dummy_client_core.rs  dummy_game_core.rs  dummy_game_factory.rs  dummy_game_launch_pack_source.rs  mod.rs  utils.rs
tests/utils/: mod.rs  rand64.rs
(+117 files in other folders)
