[workspace.package]
description = "Framework for instanced multiplayer games in Bevy"
authors = ["koe <ukoe@protonmail.com>"]
version = "0.0.1"
edition = "2021"
keywords = ["gamedev", "multiplayer"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/UkoeHB/bevy_girk"

[workspace]
resolver = "2"
members  = [
    "bevy_girk_backend_public",
    "bevy_girk_client_fw",
    "bevy_girk_client_instance",
    "bevy_girk_game_fw",
    "bevy_girk_game_hub_server",
    "bevy_girk_game_instance",
    "bevy_girk_host_server",
    "bevy_girk_user_client_utils",
    "bevy_girk_utils",
    "bevy_girk_wiring",
    "tests"
]

[workspace.dependencies]
bevy                     = { version = "0.13", default-features = false }
bevy_cobweb              = { version = "0.6" }
bevy_fn_plugin           = { version = "0.1" }
bevy_renet               = { version = "0.0.11" }
#bevy_renet = { git = "https://github.com/lucaspoffo/renet", rev = "cb80542" }
bevy_replicon  = { version = "0.26" }
bevy_replicon_renet  = { version = "0.3" }
#bevy_replicon  = { git = "https://github.com/UkoeHB/bevy_replicon", rev = "2971100" }
bevy_replicon_attributes = { version = "0.5" }
#bevy_replicon_attributes = { git = "https://github.com/UkoeHB/bevy_replicon_attributes", rev = "0f19340" }
bevy_replicon_repair = { version = "0.8" }
#bevy_replicon_repair = { git = "https://github.com/UkoeHB/bevy_replicon_repair", rev = "b0ee869" }
bevy_simplenet           = { version = "0.11", default-features = false }
iyes_progress            = { version = "0.11" , features = [ "assets" ] }
renet                    = { version = "0.0.15", default-features = false }

bincode            = { version = "1.3" }
bytes              = { version = "1.1" }
enfync             = { version = "0.1", default-features = false }
ezsockets          = { version = "0.6", default-features = false }
serde              = { version = "1.0" }
serde_json         = { version = "1.0" }
serde_with         = { version = "3.0" }
tracing            = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
url                = { version = "2.4" }

[profile.test]
opt-level = 0  #no optimizations for local tests

[profile.dev]
opt-level = 1  #minimal optimizations for local debug builds
debug     = true

[profile.dev.package."*"]
opt-level = 3  #maximum optimizations for dependencies used in debug builds

[profile.release]
lto           = "thin"  #link time optimizations (fast)
strip         = true    #minimize binary size with symbol stripping
codegen-units = 1       #maximize performance

[profile.release-small]
inherits = "release"
opt-level = "s"
lto = "fat"

[profile.release-small.package."*"]
opt-level = "s"
strip = true
