[package]
name = "bevy_girk_backend_public"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[dependencies]
bevy           = { version = "0.14", default-features = false }
bevy_simplenet = { workspace = true, features = ["client", "bevy"] }
serde          = { workspace = true }
serde_with     = { workspace = true }
tracing        = { workspace = true }

bevy_girk_game_fw       = { path = "../bevy_girk_game_fw" }
bevy_girk_game_instance = { path = "../bevy_girk_game_instance" }
bevy_girk_utils         = { path = "../bevy_girk_utils" }
