[package]
name = "bevy_girk_backend_public"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[features]
# Enables code only needed by user clients.
client = ["bevy_simplenet/client"]

[dependencies]
bevy = { workspace = true }
bevy_simplenet = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
tracing = { workspace = true }

bevy_girk_game_fw = { path = "../bevy_girk_game_fw" }
bevy_girk_game_instance = { path = "../bevy_girk_game_instance" }
bevy_girk_utils = { path = "../bevy_girk_utils" }
bevy_girk_wiring_common = { path = "../bevy_girk_wiring_common" }
