[package]
name = "bevy_girk_backend_public"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Enables code only needed by user clients.
client = ["bevy_simplenet/client"]

[dependencies]
bevy = { workspace = true }
bevy_simplenet = { workspace = true }
renet2_setup = { workspace = true, features = ["netcode"] }
serde = { workspace = true }
serde_with = { workspace = true }
tracing = { workspace = true }

bevy_girk_game_fw = { path = "../bevy_girk_game_fw" }
bevy_girk_game_instance = { path = "../bevy_girk_game_instance" }
bevy_girk_utils = { path = "../bevy_girk_utils" }

[target.'cfg(target_family = "wasm")'.dependencies]
renet2_netcode = { workspace = true, features = ["wt_client_transport"] }
