[package]
name = "bevy_girk_client_fw"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[dependencies]
bevy = { workspace = true, features = ["bevy_state"] }
bevy_cobweb = { workspace = true }
bevy_replicon = { workspace = true }
bytes = { workspace = true }
iyes_progress  = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

bevy_girk_game_fw = { path = "../bevy_girk_game_fw" }
bevy_girk_utils = { path = "../bevy_girk_utils" }
