[package]
name = "bevy_girk_client_instance"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[dependencies]
bevy = { version = "0.14", default-features = false }
tracing = { workspace = true }

bevy_girk_client_fw = { path = "../bevy_girk_client_fw" }
bevy_girk_game_instance = { path = "../bevy_girk_game_instance" }
bevy_girk_utils = { path = "../bevy_girk_utils" }
