[package]
name = "bevy_girk_client_instance"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bevy = { workspace = true }
renet2_setup = { workspace = true, features = ["netcode", "memory_transport"] }
serde = { workspace = true }
tracing = { workspace = true }
wasm-timer = { workspace = true }

bevy_girk_client_fw = { path = "../bevy_girk_client_fw" }
bevy_girk_game_fw = { path = "../bevy_girk_game_fw" }
bevy_girk_game_instance = { path = "../bevy_girk_game_instance" }
bevy_girk_utils = { path = "../bevy_girk_utils" }
