[package]
name = "bevy_girk_game_fw"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[dependencies]
bevy                     = { workspace = true, features = ["bevy_state"] }
bevy_cobweb              = { workspace = true }
bincode                  = { workspace = true }
bytes                    = { workspace = true }
bevy_replicon            = { workspace = true }
bevy_replicon_attributes = { workspace = true }
serde                    = { workspace = true }
serde_with               = { workspace = true }
tracing                  = { workspace = true }

bevy_girk_utils = { path = "../bevy_girk_utils" }
