[package]
name = "bevy_girk_game_fw"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bevy = { workspace = true, features = ["bevy_state"] }
bevy_cobweb = { workspace = true }
bytes = { workspace = true }
bevy_replicon = { workspace = true }
bevy_replicon_attributes = { workspace = true }
renet2 = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
tracing = { workspace = true }

bevy_girk_utils = { path = "../bevy_girk_utils" }
