[package]
name = "bevy_girk_game_hub_server"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[dependencies]
bevy           = { version = "0.14", default-features = false }
bevy_cobweb    = { workspace = true }
bevy_simplenet = { workspace = true }
serde          = { workspace = true }
tracing        = { workspace = true }

bevy_girk_backend_public = { path = "../bevy_girk_backend_public" }
bevy_girk_game_fw        = { path = "../bevy_girk_game_fw" }
bevy_girk_game_instance  = { path = "../bevy_girk_game_instance" }
bevy_girk_host_server    = { path = "../bevy_girk_host_server" }
bevy_girk_utils          = { path = "../bevy_girk_utils" }
