[package]
name = "bevy_girk_game_instance"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[dependencies]
bevy           = { version = "0.13", default-features = false }
bevy_cobweb    = { workspace = true }
bevy_simplenet = { workspace = true }
enfync         = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
serde_with     = { workspace = true }
tracing        = { workspace = true }

bevy_girk_game_fw = { path = "../bevy_girk_game_fw" }
bevy_girk_utils   = { path = "../bevy_girk_utils" }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
clap = { version = "4.4", default-features = false, features = [ "std", "derive" ] }

[target.'cfg(not(target_family = "wasm"))'.dependencies.tokio]
version = "1.34"
default-features = false
features = ["process"]
