[package]
name = "bevy_girk_game_instance"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[features]
# Enables the in-process launcher.
process = ["dep:clap", "dep:tokio", "bevy_girk_utils/process"]

[dependencies]
bevy           = { workspace = true }
bevy_cobweb    = { workspace = true }
bevy_simplenet = { workspace = true }
enfync         = { workspace = true, features = ["builtin"] } #todo: this pulls in tokio even when not needed
serde          = { workspace = true }
serde_json     = { workspace = true }
serde_with     = { workspace = true }
tracing        = { workspace = true }

clap = { version = "4.4", optional = true, default-features = false, features = [ "std", "derive" ] }
tokio = { workspace = true, optional = true, default-features = false, features = ["process"] }

bevy_girk_game_fw = { path = "../bevy_girk_game_fw" }
bevy_girk_utils = { path = "../bevy_girk_utils" }

[target.'cfg(target_family = "wasm")'.dependencies]
wasmtimer = { version = "0.2" }  # Provides tokio::sleep
wasm-timer = { workspace = true }  # Provides SystemTime, UNIX_EPOCH
