[package]
name = "bevy_girk_host_server"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bevy = { workspace = true }
bevy_cobweb = { workspace = true }
bevy_simplenet = { workspace = true, features = ["client", "server", "bevy"] }
renet2_setup = { workspace = true, features = ["netcode"] }
serde = { workspace = true }
tracing = { workspace = true }

bevy_girk_backend_public = { path = "../bevy_girk_backend_public" }
bevy_girk_game_fw = { path = "../bevy_girk_game_fw" }
bevy_girk_game_instance = { path = "../bevy_girk_game_instance" }
bevy_girk_utils = { path = "../bevy_girk_utils" }
