[package]
name = "bevy_girk_user_client_utils"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[dependencies]
bevy        = { workspace = true }
bevy_cobweb = { workspace = true }
enfync      = { workspace = true }
tracing     = { workspace = true }

bevy_girk_client_instance = { path = "../bevy_girk_client_instance" }
bevy_girk_game_instance = { path = "../bevy_girk_game_instance" }
bevy_girk_wiring_common = { path = "../bevy_girk_wiring_common" }
