[package]
name = "bevy_girk_user_client_utils"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bevy = { workspace = true }
bevy_cobweb = { workspace = true }
tracing = { workspace = true }

bevy_girk_client_instance = { path = "../bevy_girk_client_instance" }
bevy_girk_game_instance = { path = "../bevy_girk_game_instance" }
bevy_girk_wiring_common = { path = "../bevy_girk_wiring_common" }
