[package]
name = "bevy_girk_utils"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[dependencies]
bevy                 = { workspace = true }
bevy_cobweb          = { workspace = true }
bevy_renet2          = { workspace = true, features = [ "native_transport", "serde" ] }
bevy_replicon        = { workspace = true }
bevy_replicon_renet2 = { workspace = true, features = [ "native_transport", "renet_serde" ] }
bytes                = { workspace = true }
enfync               = { workspace = true, features = [ "builtin" ] }  #todo: this brings in tokio dependency
serde                = { workspace = true }
serde_json           = { workspace = true }
serde_with           = { workspace = true }
tracing              = { workspace = true }

async-channel = { version = "2.1" }
bincode       = { version = "1.3" }
crossbeam     = { version = "0.8" }
siphasher     = { version = "1.0" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = { version = "0.8" }

[target.'cfg(not(target_family = "wasm"))'.dependencies.tokio]
version = "1.34"
default-features = false
features = ["io-util", "process", "macros"]
