[package]
name = "bevy_girk_utils"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[features]
process = ["dep:tokio", "dep:serde_json"]

[dependencies]
bevy = { workspace = true }
bevy_replicon = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

async-channel = { version = "2.1" }
crossbeam = { version = "0.8" }
siphasher = { version = "1.0" }

serde_json = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["io-util", "process", "macros"] }
