[package]
name = "bevy_girk_utils"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
process = ["dep:tokio", "dep:enfync", "dep:serde_json"]

[dependencies]
bevy = { workspace = true }
bevy_replicon = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

async-channel = { version = "2.1" }
crossbeam = { version = "0.8" }
siphasher = { version = "1.0" }

enfync = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["io-util", "process", "macros"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = { version = "0.8" }
