[package]
name = "bevy_girk_wiring"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[dependencies]
bevy                     = { version = "0.14", default-features = false }
bevy_renet2              = { workspace = true, features = [ "native_transport" ] }
bevy_replicon            = { workspace = true }
bevy_replicon_attributes = { workspace = true }
bevy_replicon_renet2     = { workspace = true, features = [ "native_transport" ] }
bincode                  = { workspace = true }
bytes                    = { workspace = true }
iyes_progress            = { workspace = true }
serde                    = { workspace = true }
renet2                   = { workspace = true, features = ["native_transport"] }  #todo: want this feature on wasm?
tracing                  = { workspace = true }
ordered-multimap         = { version = "0.7" }
wasm-timer               = { version = "0.2" }

bevy_girk_client_fw = { path = "../bevy_girk_client_fw" }
bevy_girk_client_instance = { path = "../bevy_girk_client_instance" }
bevy_girk_game_instance = { path = "../bevy_girk_game_instance" }
bevy_girk_game_fw = { path = "../bevy_girk_game_fw" }
bevy_girk_utils = { path = "../bevy_girk_utils" }
