[package]
name = "bevy_girk_wiring_common"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
memory_transport = ["renet2/memory_transport"]

[dependencies]
bevy = { workspace = true }
bevy_replicon = { workspace = true }
renet2 = { workspace = true, features = ["transport", "serde"] }
serde = { workspace = true }
tracing = { workspace = true }

bevy_girk_game_fw = { path = "../bevy_girk_game_fw" }
