[package]
name = "bevy_girk_wiring_common"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
memory_transport = ["renet2_netcode/memory_transport"]

[dependencies]
bevy = { workspace = true }
bevy_replicon = { workspace = true }
renet2 = { workspace = true }
renet2_netcode = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_with = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

bevy_girk_game_fw = { path = "../bevy_girk_game_fw" }
bevy_girk_utils = { path = "../bevy_girk_utils" }
