[package]
name = "bevy_girk_wiring_common"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
memory_transport = ["renet2_netcode/memory_transport"]
wasm_transport_ws = ["dep:rustls", "dep:rustls-pki-types", "renet2_netcode/ws_server_transport"]

[dependencies]
bevy = { workspace = true }
bevy_replicon = { workspace = true }
renet2 = { workspace = true }
renet2_netcode = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_with = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

rustls = { workspace = true, optional = true }
rustls-pki-types = { workspace = true, optional = true }

bevy_girk_game_fw = { path = "../bevy_girk_game_fw" }
bevy_girk_utils = { path = "../bevy_girk_utils" }
