[package]
name = "bevy_girk_wiring_server"
version.workspace = true
edition.workspace = true

[lib]
test    = false
doctest = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
test = [
    "memory_transport",
    "native_transport",
    "wasm_transport_wt",
    "wasm_transport_ws"
]

transport = []

memory_transport = [
    "transport",
    "bevy_replicon_renet2/memory_transport",
    "renet2_netcode/memory_transport",
    "renet2_setup/memory_transport"
]
native_transport = [
    "transport",
    "bevy_replicon_renet2/native_transport",
    "renet2_netcode/native_transport",
    "renet2_setup/native_transport"
]
# WebTransport
wasm_transport_wt = [
    "transport",
    "bevy_replicon_renet2/wt_server_transport",
    "renet2_netcode/wt_server_transport",
    "renet2_setup/wt_server_transport"
]
# WebSockets
wasm_transport_ws = [
    "transport",
    "bevy_replicon_renet2/ws_server_transport",
    "renet2_netcode/ws_server_transport",
    "renet2_setup/ws_server_transport",
    "renet2_setup/ws-rustls",
    "dep:url"
]

[dependencies]
bevy = { workspace = true }
bevy_replicon = { workspace = true, features = ["server"] }
bevy_replicon_attributes = { workspace = true }
bevy_replicon_renet2 = { workspace = true, features = ["server"] }
bincode = { workspace = true }
bytes = { workspace = true }
renet2 = { workspace = true, features = ["bevy"] }
renet2_netcode = { workspace = true, features = ["bevy"] }
renet2_setup = { workspace = true, features = ["bevy", "server"] }
tracing  = { workspace = true }
wasm-timer = { workspace = true }

bevy_girk_game_fw = { path = "../bevy_girk_game_fw" }
bevy_girk_utils = { path = "../bevy_girk_utils" }
bevy_girk_wiring_common = { path = "../bevy_girk_wiring_common" }

url = { workspace = true, optional = true }
