[package]
name = "tests"
version.workspace = true
edition.workspace = true
publish = false

[dev-dependencies]
bevy                 = { workspace = true }
bevy_fn_plugin       = { workspace = true }
bevy_kot_ecs         = { workspace = true }
bevy_kot_utils       = { workspace = true }
bevy_renet           = { workspace = true }
bevy_replicon        = { workspace = true }
bevy_replicon_repair = { workspace = true }
bevy_simplenet       = { workspace = true }

bytes              = { workspace = true }
enfync             = { workspace = true }
ezsockets          = { workspace = true }
renet              = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = [ "env-filter", "std", "tracing-log" ] }
url                = { workspace = true }

bevy_girk_backend_public  = { path = "../libs/bevy_girk_backend_public" }
bevy_girk_client_fw       = { path = "../libs/bevy_girk_client_fw" }
bevy_girk_client_instance = { path = "../libs/bevy_girk_client_instance" }
bevy_girk_game_fw         = { path = "../libs/bevy_girk_game_fw" }
bevy_girk_game_hub_server = { path = "../libs/bevy_girk_game_hub_server" }
bevy_girk_game_instance   = { path = "../libs/bevy_girk_game_instance" }
bevy_girk_host_server     = { path = "../libs/bevy_girk_host_server" }
bevy_girk_utils           = { path = "../libs/bevy_girk_utils" }
bevy_girk_wiring          = { path = "../libs/bevy_girk_wiring" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = { version = "0.8" }

[[test]]
name = "tests"
path = "tests.rs"
