[package]
name = "tests"
version.workspace = true
edition.workspace = true
publish = false

[dev-dependencies]
bevy                     = { workspace = true, features = [ "bevy_state" ] }
bevy_cobweb              = { workspace = true }
bevy_renet2              = { workspace = true, features = [ "native_transport" ] }
bevy_replicon            = { workspace = true }
bevy_replicon_attributes = { workspace = true }
bevy_replicon_repair     = { workspace = true }
bevy_simplenet           = { workspace = true }

bytes              = { workspace = true }
enfync             = { workspace = true }
ezsockets          = { workspace = true }
renet2             = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = [ "env-filter", "std", "tracing-log" ] }
url                = { workspace = true }

bevy_girk_backend_public  = { path = "../bevy_girk_backend_public" }
bevy_girk_client_fw       = { path = "../bevy_girk_client_fw" }
bevy_girk_client_instance = { path = "../bevy_girk_client_instance" }
bevy_girk_game_fw         = { path = "../bevy_girk_game_fw" }
bevy_girk_game_hub_server = { path = "../bevy_girk_game_hub_server" }
bevy_girk_game_instance   = { path = "../bevy_girk_game_instance" }
bevy_girk_host_server     = { path = "../bevy_girk_host_server" }
bevy_girk_utils           = { path = "../bevy_girk_utils" }
bevy_girk_wiring          = { path = "../bevy_girk_wiring" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = { version = "0.8" }

[[test]]
name = "tests"
path = "tests.rs"
doctest = false
